k8s/observability/jaeger-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger-ingress
  namespace: observability
spec:
  ingressClassName: nginx
  rules:
    - host: jaeger.laranjeira.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jaeger-ui
                port:
                  number: 16686
